# llm-eval-pipeline

./: .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-and-eval.yml
docs/: next_steps_and_pitch.md
evals/: conftest.py  dataset.json  test_faithfulness.py  test_hallucination.py  test_relevance.py
src/grounded_qa/: llm.py  main.py  models.py
src/grounded_qa/static/: index.html
tests/: test_main.py
