[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-qa"
version = "0.1.0"
description = "A grounded Q&A API using Gemini Flash, with CI/CD and automated LLM evaluation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
    "deepeval>=2.0.0",
]

[project.optional-dependencies]
eval = [
    "deepeval>=2.0.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["evals"]
